# rust-examples

./: README.md  create_from_template.sh
_template/: Cargo.toml
_template/src/: logger.rs  main.rs
arrays/src/: main.rs
cmd-line-args/src/: main.rs
hash-maps/: Cargo.toml
hash-maps/src/: main.rs
impl_/src/: main.rs
implementing-traits/: Cargo.toml
logging/: Cargo.toml
match-operator/: Cargo.toml
match-operator/src/: main.rs
multiple-src-files/: Cargo.toml
multiple-src-files/src/: main.rs
pass-by-reference/: Cargo.toml
pass-by-reference/src/: main.rs
random-numbers/: Cargo.toml
random-numbers/src/: main.rs
read-file/src/: main.rs
references/: Cargo.toml
references/src/: main.rs
src/arrays/: Cargo.toml
src/cmd-line-args/: Cargo.toml
src/defining-traits/: Cargo.toml
src/defining-traits/src/: main.rs
src/enum-option/: Cargo.toml
src/enum-option/src/: main.rs
src/file-operations/: Cargo.toml  words.txt
src/file-operations/src/: main.rs
src/functions/: Cargo.toml
src/functions/src/: logger.rs  main.rs
src/http-get/: Cargo.toml
src/http-get/src/: main.rs
src/impl_/: Cargo.toml
src/match-operator/: Cargo.toml
src/modules/: Cargo.toml
src/new-project/: Cargo.toml
src/read-file/: Cargo.toml  Dockerfile
src/regex/: Cargo.toml
src/strings/: Cargo.toml
src/structs/: Cargo.toml
src/tuple-structs/: Cargo.toml
src/user-input/: Cargo.toml
src/write-file/: output.txt
strings/src/: main.rs
tuple-structs/src/: main.rs
user-input/src/: main.rs
vectors/: Cargo.toml
write-file/: Cargo.toml
(+9 files in other folders)
