[package]
name = "random-numbers"
version = "0.1.0"
authors = ["Michael Pedersen Starmer <michael.starmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4"
rand = "0.5.5"